# ollama-multi-vendor-firewall-rule-manager

./: .env.example  .gitignore  Dockerfile  README.md  claude_desktop_mcp.json  demo.cast  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_system_settings.py  0003_push_jobs.py
data/: huey.db
data/configs/samples/: cisco_asa_enterprise.txt  cisco_asa_sample.txt  cisco_ftd_enterprise.json  fortinet_enterprise.json  fortinet_sample.json  paloalto_enterprise.xml  paloalto_sample.xml
docs/: architecture.md  policy-management.md  vendor-support.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AiDock.tsx  Layout.tsx
frontend/src/contexts/: AiDockContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Deploy.tsx  DeviceDetail.tsx  Devices.tsx  Groups.tsx  Policy.tsx  Settings.tsx  Snapshots.tsx  Translations.tsx
scripts/: bootstrap_rag.py  chat.sh  demo.sh  demo_qa.sh  record_demo.sh
src/: config.py  main.py
src/ai/: import_policy.py  translate_policy_fast.py  translation.py
src/api/: main.py
src/chat/: agent.py  bot.py
src/db/: __init__.py  models.py  repository.py  session.py
src/firewall/: base.py  models.py
src/llm/: __init__.py  factory.py
src/mcp/: server.py
src/push/: compiler.py
src/rag/: chain.py  ingest.py  loader.py  vectorstore.py
src/security/: __init__.py  credentials.py
src/tasks/: __init__.py  gap_tasks.py  import_tasks.py  push_tasks.py
tests/: conftest.py  test_agent_tools.py  test_connectors.py  test_import_policy.py  test_loaders.py  test_mcp_tools.py  test_mock_connector.py  test_models.py  test_prompts.py  test_rag.py
(+34 files in other folders)
